--- a/.gitmodules
+++ b/.gitmodules
@@ -25,3 +25,18 @@
 [submodule "vendor/twig"]
 	path = vendor/twig
 	url = git://github.com/fabpot/Twig.git
+[submodule "src/Bundle/FunctionalTestBundle"]
+	path = src/Bundle/FunctionalTestBundle
+	url = git://github.com/liip/FunctionalTestBundle.git
+[submodule "src/FOS/UserBundle"]
+	path = src/FOS/UserBundle
+	url = git://github.com/sonata-project/UserBundle.git
+[submodule "src/doctrine"]
+	path = src/doctrine
+	url = git://github.com/doctrine/doctrine2.git
+[submodule "vendor/doctrine"]
+	path = vendor/doctrine
+	url = git://github.com/doctrine/doctrine2.git
+[submodule "vendor/doctrine-dbal"]
+	path = vendor/doctrine-dbal
+	url = git://github.com/doctrine/dbal.git
