--- a/.gitmodules
+++ b/.gitmodules
@@ -40,3 +40,6 @@
 [submodule "vendor/doctrine-dbal"]
 	path = vendor/doctrine-dbal
 	url = git://github.com/doctrine/dbal.git
+[submodule "vendor/swiftmailer"]
+	path = vendor/swiftmailer
+	url = git://github.com/swiftmailer/swiftmailer.git
