--- a/.gitmodules
+++ b/.gitmodules
@@ -1,30 +1,12 @@
-[submodule "src/Sonata/BaseApplicationBundle"]
-	path = src/Sonata/BaseApplicationBundle
-	url = git@github.com:Funsational/BaseApplicationBundle.git
 [submodule "src/Funsational/SimpleBlogBundle"]
 	path = src/Funsational/SimpleBlogBundle
 	url = git@github.com:Funsational/SimpleBlogBundle.git
-[submodule "src/Sonata/jQueryBundle"]
-	path = src/Sonata/jQueryBundle
-	url = git@github.com:sonata-project/jQueryBundle.git
-[submodule "src/Sonata/BluePrintBundle"]
-	path = src/Sonata/BluePrintBundle
-	url = git@github.com:sonata-project/BluePrintBundle.git
-[submodule "src/Knplabs/MenuBundle"]
-	path = src/Knplabs/MenuBundle
-	url = git@github.com:sonata-project/MenuBundle.git
 [submodule "vendor/symfony"]
 	path = vendor/symfony
 	url = git://github.com/fabpot/symfony.git
 [submodule "vendor/mongodb-odm"]
 	path = vendor/mongodb-odm
 	url = git://github.com/doctrine/mongodb-odm
-[submodule "vendor/zend"]
-	path = vendor/zend
-	url = git://github.com/zendframework/zf2.git
-[submodule "vendor/ZendPaginatorAdapter"]
-	path = vendor/ZendPaginatorAdapter
-	url = git://github.com/ornicar/ZendPaginatorAdapter.git
 [submodule "vendor/twig"]
 	path = vendor/twig
 	url = git://github.com/fabpot/Twig.git
@@ -46,3 +28,27 @@
 [submodule "vendor/swiftmailer"]
 	path = vendor/swiftmailer
 	url = git://github.com/swiftmailer/swiftmailer.git
+[submodule "vendor/assetic"]
+	path = vendor/assetic
+	url = git://github.com/kriswallsmith/assetic.git
+[submodule "vendor/doctrine-data-fixtures"]
+	path = vendor/doctrine-data-fixtures
+	url = git://github.com/doctrine/data-fixtures.git
+[submodule "vendor/doctrine-common"]
+	path = vendor/doctrine-common
+	url = git://github.com/doctrine/common.git
+[submodule "vendor/doctrine-migrations"]
+	path = vendor/doctrine-migrations
+	url = git://github.com/doctrine/migrations.git
+[submodule "vendor/doctrine-mongodb-odm"]
+	path = vendor/doctrine-mongodb-odm
+	url = git://github.com/doctrine/mongodb-odm.git
+[submodule "vendor/doctrine-mongodb"]
+	path = vendor/doctrine-mongodb
+	url = git://github.com/doctrine/mongodb.git
+[submodule "vendor/twig-extensions"]
+	path = vendor/twig-extensions
+	url = git://github.com/fabpot/Twig-extensions.git
+[submodule "vendor/zend-log/Zend/Log"]
+	path = vendor/zend-log/Zend/Log
+	url = git://github.com/symfony/zend-log.git
