--- a/.gitmodules
+++ b/.gitmodules
@@ -58,3 +58,6 @@
 [submodule "src/Sonata/BluePrintBundle"]
 	path = src/Sonata/BluePrintBundle
 	url = git@github.com:sonata-project/BluePrintBundle.git
+[submodule "src/Sonata/BaseApplicationBundle"]
+	path = src/Sonata/BaseApplicationBundle
+	url = git@github.com:Funsational/BaseApplicationBundle.git
