--- a/development/config/routing.yml
+++ b/development/config/routing.yml
@@ -8,13 +8,13 @@ _security_check:
 blog:
    resource: @SimpleBlogBundle/Resources/config/routing.xml
 
-#admin:
-#    resource: @SonataBaseApplicationBundle/Resources/config/routing/sonata_base_application.xml
-#    prefix: /admin
+admin:
+    resource: @SonataBaseApplicationBundle/Resources/config/routing/sonata_base_application.xml
+    prefix: /admin
 
-#_sonata_base_appliation:
-#    resource: .
-#    type: sonata_base_application
+_sonata_base_appliation:
+    resource: .
+    type: sonata_base_application
 
     
 
