--- a/.gitmodules
+++ b/.gitmodules
@@ -3,7 +3,7 @@
 	url = git@github.com:Funsational/SimpleBlogBundle.git
 [submodule "vendor/symfony"]
 	path = vendor/symfony
-	url = git://github.com/fabpot/symfony.git
+	url = git://github.com/symfony/symfony.git
 [submodule "vendor/mongodb-odm"]
 	path = vendor/mongodb-odm
 	url = git://github.com/doctrine/mongodb-odm
